horizontal scroll on team section fixed

--- a/src/assets/scss/partials/_team.scss
+++ b/src/assets/scss/partials/_team.scss
@@ -4,7 +4,7 @@
     font-family: "Roboto", sans-serif;
     display: flex;
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     padding: 13vh 0 0 0;
